tests/snapshots/compiler_error_fixtures/row_effects__unresolved_row_subtract_single_e419.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unresolved_row_subtract_single_e419.flx
== compile ==
failed (compile)
== diagnostics ==
error[E419]: Unresolved Effect Row

I cannot resolve the effect variable `e` introduced by this call.

  examples/compiler_errors/row_effects/unresolved_row_subtract_single_e419.flx:6:5
  |
6 |     unresolved(1)
  |     ^^^^^^^^^^
  |     ---------- this call leaves an effect variable unconstrained

  |     ---------- this call to `unresolved` creates the effect obligation

Note:
  unresolved effect variable: e
  constraint source: effect-row checking for `unresolved`

Help:
  Add an explicit effect annotation such as `with e` or pass a callback with concrete effects.
== stdout ==
<not executed>
